# shellCodeInjector

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
include/: GenShellCode.h  Injector.h
src/: GenShellCode.cpp  Injector.cpp  ShellCodeInjector.cpp
